IDE-4153 Intellij IDEA plugin should support portal Wildfly bundle